fix: fix endpoints